--- a/backend/package.json
+++ b/backend/package.json
@@ -3,13 +3,17 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "test": "vitest"
+  },
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
     "ts-node": "^10.9.1",
-    "dotenv": "^16.3.1"
+    "vitest-mock-extended": "^1.3.1"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.4",
@@ -18,6 +22,8 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.45.0",
-    "typescript": "^5.0.2"
+    "supertest": "^6.3.3",
+    "typescript": "^5.0.2",
+    "vitest": "^0.34.6"
   }
 }
