--- a/package.json
+++ b/package.json
@@ -7,11 +7,19 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "check:lint:fe": "eslint . --fix",
+    "check:lint:be": "cd ./backend && eslint . --fix",
+    "check:lint": "run-s check:lint:fe check:lint:be",
+    "check:prettier:fe": "prettier --check \"./src/**/**.{js,ts,tsx}\"",
+    "check:prettier:be": "cd ./backend && prettier --check \"./**.{js,ts}\"",
+    "check:prettier": "run-s check:prettier:fe check:prettier:be"
   },
   "dependencies": {
     "autoprefixer": "^10.4.16",
     "axios": "^1.5.1",
+    "husky": "^8.0.3",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -29,6 +37,7 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "prettier": "^3.0.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
