--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
+    "prepare": "husky install",
     "check:lint:fe": "eslint . --fix",
     "check:lint:be": "cd ./backend && eslint . --fix",
     "check:lint": "run-s check:lint:fe check:lint:be",
