verify lint and prettier in workflow, make workflow run for pr into main

--- a/.github/workflows/push-to-prod.yml
+++ b/.github/workflows/push-to-prod.yml
@@ -23,6 +23,10 @@ jobs:
           cd ./backend
           yarn install
           cd ..
+      - name: Check lint and formatting
+        run: |
+          yarn check:lint
+          yarn check:prettier
 
       - name: Run tests
         run: | 
