--- a/.github/workflows/push-to-prod.yml
+++ b/.github/workflows/push-to-prod.yml
@@ -1,8 +1,8 @@
-name: push-into-dev
+name: push-into-main
 on:
   pull_request:
     branches:
-      - dev
+      - main
 
 jobs:
   run-tests:
@@ -23,6 +23,7 @@ jobs:
           cd ./backend
           yarn install
           cd ..
+
       - name: Check lint and formatting
         run: |
           yarn check:lint
