--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -24,12 +24,24 @@ jobs:
           cd ./backend
           yarn install
           cd ..
+
       - name: Check lint and formatting
         run: |
           yarn check:lint
           yarn check:prettier
 
-      - name: Run tests
-        run: | 
+      - name: Run BE tests
+        run: |
           cd ./backend && yarn run vitest && cd ..
+
+      - name: Start the BE server
+        run: |
+          ts-node ./backend/index.ts & sleep 10
+
+      - name: Start the FE server
+        run: |
+          yarn dev & sleep 10
+
+      - name: Run cypress e2e tests
+        run: | 
           npx cypress run
