--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.6",
     "@types/node": "^20.8.6",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
