--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
     "noFallthroughCasesInSwitch": true,
 
   },
-  "include": ["src"],
+  "include": ["src", "cypress"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
