--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test": "vitest"
+    "test": "vitest",
+    "start:dev": "ts-node index.ts"
   },
   "dependencies": {
     "cookie-parser": "^1.4.6",
