--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Start the BE server
         run: |
-          cd ./backend && yarn start:dev && cd ..
+          cd ./backend && yarn start:dev & sleep 10 && cd ..
 
       - name: Start the FE server
         run: |
