--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -41,16 +41,17 @@ jobs:
         env:
           VITE_API_KEY: ${{ secrets.VITE_API_KEY }}
 
-
       - name: Start the BE server
         run: |
           cd ./backend && yarn start:dev & sleep 2 && cd ..
         env:
-          FE_HOST: ${{ secrets.VITE_API_KEY }}
+          FE_HOST: ${{ secrets.FE_HOST }}
 
       - name: Start the FE server
         run: |
           yarn dev & sleep 2
+        env:
+          VITE_API_KEY: ${{ secrets.VITE_API_KEY }}
 
       - name: Run cypress e2e tests
         run: | 
