--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.16",
     "axios": "^1.5.1",
+    "http-server": "^14.1.1",
     "husky": "^8.0.3",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.31",
@@ -36,6 +37,7 @@
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
     "cypress": "^13.3.1",
+    "cypress-failed-log": "^2.10.0",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
