--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -50,7 +50,7 @@ jobs:
 
       - name: Send curl request to backend
         run: |
-          curl http://localhost:3001/api/hello
+          curl ${{ secrets.VITE_API_URL }}
 
       - name: Run cypress e2e tests
         run: |
