--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -37,11 +37,12 @@ jobs:
       - name: Start the BE server
         run: |
           cd ./backend && yarn start:dev & sleep 2 && cd ..
+          
 
-      - name: Start the FE server
-        run: |
-          yarn run:actions & sleep 2
-
-      - name: Run cypress e2e tests
-        run: |
-          yarn cypress run --headed --browser chrome 
+      - name: Cypress run
+        uses: cypress-io/github-action@v6
+        with:
+          browser: chrome
+          build: yarn build
+          start: yarn start
+          wait-on: "http://localhost:3000"
