--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -41,7 +41,11 @@ jobs:
       - name: Start the FE server
         run: |
           yarn run:actions & sleep 20
-          curl http://localhost:3000 && curl http://localhost:3001/api/hello
+          curl http://localhost:3001/api/hello
+          curl http://localhost:3000
+          curl http://localhost:3001/api/hello
+          curl http://localhost:3000
+          
 
       - name: Run cypress e2e tests
         run: |
