--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@vitejs/plugin-react": "^4.0.3",
     "cypress": "^13.3.1",
     "cypress-failed-log": "^2.10.0",
+    "cypress-terminal-report": "^5.3.7",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
