--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -40,12 +40,7 @@ jobs:
 
       - name: Start the FE server
         run: |
-          yarn run:actions & sleep 5
-          curl http://localhost:3001/api/hello
-          curl http://localhost:3000
-          curl http://localhost:3001/api/hello
-          curl http://localhost:3000
-          
+          yarn buildandrun & sleep 5
 
       - name: Run cypress e2e tests
         run: |
