--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "test": "vitest",
-    "start:dev": "ts-node index.ts"
+    "dev": "nodemon index.ts"
   },
   "dependencies": {
     "cookie-parser": "^1.4.6",
@@ -23,6 +23,7 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.45.0",
+    "nodemon": "^3.0.1",
     "supertest": "^6.3.3",
     "typescript": "^5.0.2",
     "vitest": "^0.34.6"
