--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.16",
     "axios": "^1.5.1",
+    "clsx": "^2.0.0",
     "dotenv-cli": "^7.3.0",
     "http-server": "^14.1.1",
     "husky": "^8.0.3",
