--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/jest": "^29.5.6",
