Add google auth basic functionality

--- a/.env.development.local.sample
+++ b/.env.development.local.sample
@@ -1,6 +1,9 @@
-HOST_FE=http://localhost:3001
+HOST_FE=http://localhost:3000
 DOMAIN_FE=localhost
-VITE_HOST_BE=http://localhost:3002
+VITE_HOST_BE=http://localhost:3001
 
-PORT_BE=3002
-PORT_FE=3001
+PORT_BE=3001
+PORT_FE=3000
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
