--- a/backend/package.json
+++ b/backend/package.json
@@ -13,13 +13,19 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
+    "express-session": "^1.17.3",
+    "passport": "^0.6.0",
+    "passport-google-oauth": "^2.0.0",
     "ts-node": "^10.9.1",
     "vitest-mock-extended": "^1.3.1"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.4",
     "@types/cors": "^2.8.15",
+    "@types/express-session": "^1.17.9",
     "@types/node": "^20.8.6",
+    "@types/passport": "^1.0.14",
+    "@types/passport-google-oauth": "^1.0.44",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.45.0",
