--- a/backend/package.json
+++ b/backend/package.json
@@ -8,18 +8,26 @@
     "dev": "nodemon index.ts"
   },
   "dependencies": {
+    "@prisma/client": "5.4.2",
+    "bcryptjs": "^2.4.3",
+    "connect-pg-simple": "^9.0.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
     "express-session": "^1.17.3",
+    "@faker-js/faker": "^8.1.0",
     "passport": "^0.6.0",
     "passport-google-oauth": "^2.0.0",
+    "prisma": "^5.4.2",
     "ts-node": "^10.9.1",
-    "vitest-mock-extended": "^1.3.1"
+    "vitest-mock-extended": "^1.3.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.5",
+    "@types/connect-pg-simple": "^7.0.2",
     "@types/cookie-parser": "^1.4.4",
     "@types/cors": "^2.8.15",
     "@types/express-session": "^1.17.9",
