--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "start:dev:be": "dotenv -e .env.development.local yarn dev:be",
     "start:dev:fe": "dotenv -e .env.development.local yarn dev",
     "start:prod:be": "dotenv -e .env yarn dev:be",
-    "start:prod:fe": "dotenv -e .env yarn dev"
+    "start:prod:fe": "dotenv -e .env yarn dev",
+    "prisma:migrate": "cd ./backend && npx prisma migrate dev --name remove_username",
+    "prisma:generate": "cd ./backend && npx prisma generate",
+    "prisma:migrate:dev": "dotenv -e .env.development.local yarn prisma:migrate",
+    "prisma:migrate:prod": "dotenv -e .env yarn prisma:migrate"
   },
   "dependencies": {
     "autoprefixer": "^10.4.16",
@@ -37,6 +41,7 @@
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.17.0",
     "tailwindcss": "^3.3.3",
     "yup": "^1.3.2"
