Add db_ssl env variable

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -41,6 +41,7 @@ jobs:
           echo "GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}" >> .env.development.local
           echo "SESSION_SECRET=${{ secrets.SESSION_SECRET }}" >> .env.development.local
           echo "POSTGRES_DB_CONN=${{ secrets.POSTGRES_DB_CONN }}" >> .env.development.local
+          echo "DB_SSL=false" >> .env.development.local
         shell: bash
 
       - name: Run BE tests
