--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "prisma:migrate:prod": "dotenv -e .env yarn prisma:migrate"
   },
   "dependencies": {
+    "@types/react-beautiful-dnd": "^13.1.6",
     "autoprefixer": "^10.4.16",
     "axios": "^1.5.1",
     "clsx": "^2.0.0",
@@ -40,6 +41,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.17.0",
