--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@types/react-beautiful-dnd": "^13.1.6",
+    "@types/uuid": "^9.0.6",
     "autoprefixer": "^10.4.16",
     "axios": "^1.5.1",
     "clsx": "^2.0.0",
