--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "prisma:migrate": "cd ./backend && npx prisma migrate dev --name modify_subtask_table_add_dates",
     "prisma:generate": "cd ./backend && npx prisma generate",
     "prisma:migrate:dev": "dotenv -e .env.development.local yarn prisma:migrate",
-    "prisma:migrate:prod": "dotenv -e .env yarn prisma:migrate"
+    "prisma:migrate:prod": "dotenv -e .env yarn prisma:migrate",
+    "postinstall": "cd ./backend && yarn prisma generate"
   },
   "dependencies": {
     "@types/react-beautiful-dnd": "^13.1.6",
