--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "yarn prisma:generate && tsc && vite build",
+    "build": "tsc && vite build",
     "buildandrun": "vite build && http-server dist -p 3000 -a localhost",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
