--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.17.0",
     "tailwindcss": "^3.3.3",
